finished /users endpoints, started working on dockerizing
